--- a/eleccion/templates/funcionarios/actualizar.html
+++ b/eleccion/templates/funcionarios/actualizar.html
@@ -3,7 +3,7 @@
     <div class="container text-center mt-5">
         <div class="row mb-4">
             <div class="col-md-12">
-                <h1 style="font-size: 28px;">Casilla: {{object.ubicacion}} </h1>
+                <h1 style="font-size: 28px;">Funcionario: {{object.nombrecompleto}} </h1>
             </div>
         </div>
 
@@ -15,9 +15,9 @@
 
                     <nav aria-label="breadcrumb mb-3">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="../">Casillas</a></li>
+                            <li class="breadcrumb-item"><a href="../">Funcionarios</a></li>
                             <li class="breadcrumb-item"><a href="#">Editar</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">{{object.ubicacion}}</a>
+                            <li class="breadcrumb-item active" aria-current="page">{{object.nombrecompleto}}</a>
                             </li>
                         </ol>
                     </nav>
@@ -30,7 +30,17 @@
                             {% csrf_token %}
                             <!-- {{ form.as_p }} -->
                             <div class="form-group">
-                                <label for="ubicacion" class="txt_negrita">Ubicación</label> {{ form.ubicacion }}
+                                <label for="nombrecompleto" class="txt_negrita">Nombre completo:</label> {{ form.nombrecompleto }}
+                            </div>
+
+                            <div class="form-group">
+                                <label for="sexo">Sexo:</label>
+                                <select id="sexo" class="form-group" name="sexo">
+                                    <optgroup label="Sexo">
+                                        <option for="sexo" class="form-group" label="Masculino" name="sexo">M</option>
+                                        <option for="sexo" class="form-group" label="Femenino" name="sexo">F</option>
+                                    </optgroup>
+                                </select>
                             </div>
                             <button type="submit" class="btn btn-primary">Aceptar</button>
                             <a href="../" type="submit" class="btn btn-primary">Volver</a>
