--- a/eleccion/templates/template.html
+++ b/eleccion/templates/template.html
@@ -30,6 +30,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/candidato">Candidatos</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/funcionario">Funcionarios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
