4ta tabla que no depende de otras

--- a/eleccion/templates/candidatos/detalles.html
+++ b/eleccion/templates/candidatos/detalles.html
@@ -32,6 +32,12 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/candidato">Candidatos</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/funcionario">Funcionarios</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/eleccion">Elecciones</a>
+                        </li>
                     </ul>
                 </div>
             </div>
