--- a/eleccion/templates/funcionarios/detalles.html
+++ b/eleccion/templates/funcionarios/detalles.html
@@ -27,13 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarsExample07">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="">Casillas</a>
+                            <a class="nav-link" href="/casilla">Casillas</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="">Candidato</a>
+                            <a class="nav-link" href="/candidato">Candidatos</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="">Funcionarios</a>
+                            <a class="nav-link" href="/funcionario">Funcionarios</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/eleccion">Elecciones</a>
                         </li>
                     </ul>
                 </div>
