--- a/eleccion/templates/elecciones/detalles.html
+++ b/eleccion/templates/elecciones/detalles.html
@@ -49,7 +49,7 @@
 
             <div class="row mb-5">
                 <div class="col-md-12">
-                    <h1 style="font-size: 28px;">Casilla: {{object.ubicacion}} </h1>
+                    <h1 style="font-size: 28px;">Eleccion: {{object.periodo}} </h1>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
 
                         <nav aria-label="breadcrumb mb-3">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="../">Casillas</a></li>
+                                <li class="breadcrumb-item"><a href="../">Elecciones</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Editar</a>
                                 </li>
                             </ol>
@@ -71,7 +71,13 @@
 
                             <h4>Detalles</h4>
 
-                            <p><span class="txt_negrita">Ubicación:</span> {{object.ubicacion}}</p>
+                            <p><span class="txt_negrita">Periodo:</span> {{object.periodo}}</p>
+                            <p><span class="txt_negrita">Fecha:</span> {{object.fecha}}</p>
+                            <p><span class="txt_negrita">Fecha de apertura:</span> {{object.fechaapertura}}</p>
+                            <p><span class="txt_negrita">Hora de apertura:</span> {{object.horaapertura}}</p>
+                            <p><span class="txt_negrita">Fecha de cierre:</span> {{object.fechacierre}}</p>
+                            <p><span class="txt_negrita">Hora de cierre:</span> {{object.horacierre}}</p>
+                            <p><span class="txt_negrita">Observaciones:</span> {{object.observaciones}}</p>
                             <a href="../" type="submit" class="btn btn-primary">Volver</a>
 
                         </div>
